--- a/gogostudy.css
+++ b/gogostudy.css
@@ -7,6 +7,10 @@
 	font-family : 'Noto sans KR'
 }
 
+a{
+	text-decoration : none;
+}
+
 a:link{
 	color : white;
 }
@@ -14,7 +18,7 @@ a:visited{
 	color : white;
 }
 a:hover{
-	color : white;
+	color : yellow;
 }
 a:active{
 	color : white;
@@ -49,12 +53,31 @@ section:after {
 
 table{
 	width : 80%;
-	margin : 0 auto;
+	margin : 20px auto;
 	border :  1px solid #fff;
 }
 
 th{
 	border-bottom : 2px solid #fff;
+}
+
+th, td{
+	
+	padding : 10px;
+}
+
+tr td:nth-of-type(1){
+	text-align : left;
+}
+
+caption{
+	width : 70px;
+	height : 28px;
+	margin : 0 85%;
+	text-align : center;
+	margin-bottom : 10px;
+	border : 1px solid #fff; 
+	border-radius : 20px;
 }
 
 #sec01, #sec02, #sec03 {
@@ -75,10 +98,8 @@ th{
 	background-color : #42A0F6;
 }
 
-li{
-	list-style : none;
-}
 
 footer{
 	background-color :#F4E0E1;
+	padding : 20px 0;
 }
