--- a/layout/review11/main.html
+++ b/layout/review11/main.html
@@ -16,14 +16,14 @@
 			</h1>	
 			<nav>
 				<ul>
-					<li>회사소개</li>
-					<li>제품소개</li>
-					<li>인재채용</li>
-					<li>녹색경영</li>
+					<li><a href="#">회사소개</a></li>
+					<li><a href="#">제품소개</a></li>
+					<li><a href="#">인재채용</a></li>
+					<li><a href="#">녹색경영</a></li>
 				</ul>
 			</nav>
 			<div id="util">
-				<img src="./images/contact-us.png" alt="contaxt us" />
+				<a href="#"><img src="./images/contact-us.png" alt="contaxt us" /></a>
 			</div>
 		</div>	
 		<div id="visual_bnr">
