--- a/layout/review11/css/main.css
+++ b/layout/review11/css/main.css
@@ -29,9 +29,13 @@ nav ul li{
 	margin-right : 30px;
 	font-size : 12pt;
 	font-weight : bold;
-	color : #000;
-	
+	color : #000;	
 }
+
+nav ul li a:hover{color : #000;}
+nav ul li a:active{color : #000;}
+nav ul li a:visited{color : #000;}
+nav ul li a:link{color : #000;}
 
 #util{
 	position : absolute;
