--- a/gogostudy.css
+++ b/gogostudy.css
@@ -115,3 +115,124 @@ footer{
 footer h3{
 	color : #000;
 }
+
+
+@media screen and (max-width:700px){	
+/*브라우저의 가로 사이즈가 620px로 변하면*/
+	*{
+	margin:0; padding:0;
+	list-style:none;
+	text-align:center;
+	font-family : 'Noto sans KR'
+}
+
+a{
+	text-decoration : none;
+}
+
+a:link{
+	color : white;
+}
+a:visited{
+	color : white;
+}
+a:hover{
+	color : yellow;
+}
+a:active{
+	color : white;
+}
+
+#wrap{
+	margin : 0px auto;
+	position : relative;
+}
+
+header{
+	height : 100px;
+	padding-top : 60px;
+	background : #F1969C;
+	text-align : center;
+}
+
+#container{	
+	width : 100%;
+	text-align : center;	
+	margin : 0px auto;
+}
+
+section:after {	
+	content : '';
+	clear : both;
+	visibility : hidden;
+	width : 0;
+	height : 0;
+	display : block;
+}
+
+table{
+	width : 80%;
+	margin : 20px auto;
+	border :  1px solid #fff;
+}
+
+th{
+	border-bottom : 2px solid #fff;
+}
+
+th, td{
+	font-size : 30px;
+	padding : 10px;
+}
+
+tr td:nth-of-type(1){
+	text-align : left;
+}
+
+caption{
+	width : 70px;
+	height : 28px;
+	margin : 0 85%;
+	text-align : center;
+	margin-bottom : 10px;
+	border : 1px solid #fff; 
+	border-radius : 20px;
+}
+
+#sec01, #sec02, #sec03, #sec04, #sec05 {
+	color : #ffffff;
+	text-align : left;
+	padding : 50px 0;
+}
+
+#sec01{
+	background-color : #2A3632;
+}
+
+#sec02{
+	background-color : #E85559;
+}
+
+#sec03{
+	background-color : #42A0F6;
+}
+
+#sec04{
+	background-color : #2A3632;
+}
+
+#sec05{
+	background-color : #E85559;
+}
+
+
+footer{
+	background-color :#F4E0E1;
+	padding : 20px 0;
+}
+
+footer h3{
+	color : #000;
+}
+
+}
