--- a/gogostudy.css
+++ b/gogostudy.css
@@ -181,12 +181,15 @@ th{
 }
 
 th, td{
-	font-size : 30px;
+	font-size : 1.2em;
 	padding : 10px;
 }
 
 tr td:nth-of-type(1){
 	text-align : left;
+}
+tr td:nth-of-type(2), tr td:nth-of-type(3){	
+	font-size : 1em;
 }
 
 caption{
