--- a/project03/css/main.css
+++ b/project03/css/main.css
@@ -348,7 +348,7 @@ footer{
 	.header{position : static;}
 	.header .logo{float : left;}
 	.header .gnb{
-		display : block;
+		display : block !important;
 		position : static;
 		float : right;
 		width : auto;
@@ -366,7 +366,7 @@ footer{
 	
 	.header .gnb li a{color : #000;}
 	.header .gnb li a:hover{font-weight : bold;}
-	.menu-toggle-btn{display : none;}
+	.menu-toggle-btn{display : none !important;}
 	
 	/*태블릿용 about 영역*/
 	.display-section{margin-top : 90px;}
@@ -476,6 +476,7 @@ footer{
 		display : block;
 		position : absolute;
 		top : 10px;
+		left : 0px;
 		background-color : #666;
 		width : 2px;
 		height : 45px;
