--- a/gogostudy.css
+++ b/gogostudy.css
@@ -4,7 +4,7 @@
 	margin:0; padding:0;
 	list-style:none;
 	text-align:center;
-	font-family : 'Noto sans KR'
+	font-family: 'Noto Sans KR', sans-serif;
 }
 
 a{
