--- a/sy_index.css
+++ b/sy_index.css
@@ -80,31 +80,27 @@ caption{
 	border-radius : 20px;
 }
 
-#sec01, #sec02, #sec03, #sec04{
+.sec01, .sec02, .sec03, .sec04{
 	color : #ffffff;
 	padding : 100px 0;
 	
 }
 
-#sec01>h2, #sec02>h2, #sec03>h2, #sec04>h2 {
+.sec01>h2, .sec02>h2, .sec03>h2, .sec04>h2 {
 	text-align : center;
 }
 
 
-#sec01{
+.sec01{
 	background-color : #2A3632;
 }
 
-#sec02{
+.sec02{
 	background-color : #E85559;
 }
 
-#sec03{
+.sec03{
 	background-color : #42A0F6;
-}
-
-#sec04{
-	background-color : #2A3632;
 }
 
 
