--- a/gogostudy.css
+++ b/gogostudy.css
@@ -80,29 +80,29 @@ caption{
 	border-radius : 20px;
 }
 
-#sec01, #sec02, #sec03, #sec04, #sec05 {
+.sec01, .sec02, .sec03, .sec04, .sec05 {
 	color : #ffffff;
 	text-align : left;
 	padding : 50px 0;
 }
 
-#sec01{
+.sec01{
 	background-color : #2A3632;
 }
 
-#sec02{
+.sec02{
 	background-color : #E85559;
 }
 
-#sec03{
+.sec03{
 	background-color : #42A0F6;
 }
 
-#sec04{
+.sec04{
 	background-color : #2A3632;
 }
 
-#sec05{
+.sec05{
 	background-color : #E85559;
 }
 
